--- a/Serialization/Serialization.csproj
+++ b/Serialization/Serialization.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13A05BAE-01A3-43C3-BC05-C585749ADB48}</ProjectGuid>
+    <ProjectGuid>{129D4CC0-A060-4541-9AB0-8C762E1A3A0D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>IntroToCSharp</RootNamespace>
-    <AssemblyName>IntroToCSharp</AssemblyName>
+    <RootNamespace>Serialization</RootNamespace>
+    <AssemblyName>Serialization</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,16 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleLogger.cs" />
     <Compile Include="CustomSerializer.cs" />
-    <Compile Include="GameState.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="InClass.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextLogger.cs" />
-    <Compile Include="Vector3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
